# prism

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod
.github/workflows/: ci.yml
cmd/prism/: main.go
config/examples/: rules.toml
config/repos/: example__github__acme__api.toml
internal/config/: config.go  config_test.go  resolve.go  resolve_test.go  writetemp.go
internal/engine/: engine.go  engine_test.go
internal/llm/: anthropic.go  azure_openai.go  fallback.go  llm.go  llm_test.go  ollama.go  openai.go
internal/reviewer/: diff.go  diff_test.go  reviewer.go  reviewer_test.go
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/diff-parser/: Cargo.toml
rust/diff-parser/src/: lib.rs
rust/rules-engine/: Cargo.toml
rust/rules-engine/src/: lib.rs
